# adk-cli

./: .cruft.json  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements_dev.txt
.agent/skills/gh-release/: SKILL.md
.agent/skills/gh-release/scripts/: create-release.sh
.devcontainer/: devcontainer.json
.github/workflows/: lint.yaml  pages.yaml  publish.yaml  test.yaml
adk_cli/: agent_factory.py  api_key.py  confirmation.py  constants.py  main.py  policy.py  projects.py  retry_gemini.py  settings.py  skills.py  status.py  summarize.py  tools.py  tui.py
adk_cli/cli/: config.py  sessions.py
adk_cli/skills/: _skills.py
adk_coder/: agent_factory.py
docs/: bootstrapping_plan.md  implementation_plan.md  memory_strategy.md  task.md  tui_redesign_plan.md
script/: run-ty.sh  test
tests/: __init__.py  test_agent_factory.py  test_api_key.py  test_builtin_agents.py  test_cli.py  test_granular_policy.py  test_init.py  test_policy.py  test_settings.py  test_skills.py  test_tools.py
tests/skills/: test_builtin_agents.py  test_skills.py
